links added to index.html

--- a/index.html
+++ b/index.html
@@ -3,4 +3,11 @@
 	<head>
 		<h1><title>Index page</title></h1>
 	</head>
+	<body>
+		<h1>Links</h1>
+		<a href="heading.html">Heading</a>
+		<a href="loremipsum.html">Lorem ipsum</a>
+		<a href="image.html">Image</a>
+		<a href="webtech.html">Web tech</a>
+	</body>
 </html>
